force-app/main/default/objects/skilljar__Signup_Field__c/skilljar__Signup_Field__c.object-meta.xml
<CustomObject>
    <label>Signup Field</label>
    <nameField>
        <label>Signup Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signup Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>