force-app/main/default/objects/skilljar__Signup_Field__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Contact to Signup Field</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Skilljar Signup Fields</relationshipLabel>
    <relationshipName>Signup_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>