force-app/main/default/objects/skilljar__Signup_Field__c/fields/skilljar__Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Domain_Name__c</fullName>
    <description>Domain where the user signed up and supplied the field Values.</description>
    <label>Domain Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>