force-app/main/default/objects/skilljar__Signup_Field__c/fields/skilljar__Label__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>