force-app/main/default/objects/skilljar__Signup_Field__c/fields/skilljar__Lead__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Salesforce Lead to Signup Field</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Skilljar Signup Fields</relationshipLabel>
    <relationshipName>Signup_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>