force-app/main/default/objects/skilljar__Signup_Field__c/fields/skilljar__Value__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Value__c</fullName>
    <description>Value entered by the Student</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>