force-app/main/default/objects/skilljar__Signup_Field__c/listViews/skilljar__All.listView-meta.xml
<ListView>
    <fullName>skilljar__All</fullName>
    <columns>skilljar__Label__c</columns>
    <columns>skilljar__Value__c</columns>
    <columns>skilljar__Domain_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>